--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,37 @@
-#my-game {
-    width: 800px;
-    height: 600px;
-    margin: 0 auto;
-    border: 1px solid black;
+.hero-image {
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../sprites/bl.jpg");
+
+    height: 20%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+
+  .box{ 
+	width:100px; 
+	height:100px; 
+} 
+ 
+
+header {
+    left: 0px;
+    top:0px;
+    z-index: 1000;
+}
+
+.hero-image::after {
+    content:'';
+    height: 20vh;
+    display: block;
 }
