--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ body {
 }
 
 .tales_of_adventure_preview_text {
+    text-align: center;
     margin-bottom: 32px;
     font-size: 28px;
     font-weight: bold;
@@ -78,6 +79,7 @@ body {
 
 .tales_of_adventure_preview_text p {
     margin-bottom: 16px;
+    text-align: center;
     font-size: 16px;
     font-weight: normal;
 }
@@ -147,4 +149,102 @@ div {
 #myBtn:hover {
     background-color: #555;
     /* Add a dark-grey background on hover */
+}
+
+footer .main-footer {
+    padding: 10px 0;
+    background: #252525;
+}
+
+footer ul {
+    padding-left: 0;
+    list-style: none;
+}
+
+
+/* Copy Right Footer */
+
+.footer-copyright {
+    background: #222;
+    padding: 5px 0;
+}
+
+.footer-copyright .logo {
+    display: inherit;
+}
+
+.footer-copyright nav {
+    float: right;
+    margin-top: 5px;
+}
+
+.footer-copyright nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-copyright nav ul li {
+    border-left: 1px solid #505050;
+    display: inline-block;
+    line-height: 12px;
+    margin: 0;
+    padding: 0 8px;
+}
+
+.footer-copyright nav ul li a {
+    color: #ffffff;
+}
+
+.footer-copyright nav ul li:first-child {
+    border: medium none;
+    padding-left: 0;
+}
+
+.footer-copyright p {
+    color: #ffffff;
+    margin: 2px 0 0;
+}
+
+
+}
+.widget.no-box {
+    padding: 0;
+    background-color: transparent;
+    margin-bottom: 40px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    -o-box-shadow: none;
+}
+.typo-light h1,
+.typo-light h2,
+.typo-light h3,
+.typo-light h4,
+.typo-light h5,
+.typo-light h6,
+.typo-light p,
+.typo-light div,
+.typo-light span,
+.typo-light small {
+    color: #fff;
+}
+ul.social-footer2 {
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
+ul.social-footer2 li {
+    display: inline-block;
+    padding: 0;
+}
+ul.social-footer2 li a:hover {
+    background-color: #ff8d1e;
+}
+ul.social-footer2 li a {
+    display: block;
+    height: 30px;
+    width: 30px;
+    text-align: center;
 }
