--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,10 @@ body {
     font-weight: normal;
 }
 
+.tales_of_adventure_preview_image {
+    margin: auto 0;
+}
+
 .col-4 p {
     margin-bottom: 16px;
     font-size: 16px;
