--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,18 +62,20 @@ body {
 }
 
 .col-4 {
-    border-radius: 25px;
+    border-radius: 32px;
+    border: 2px solid #73AD21;
     margin: 0 auto;
     background-color: rgb(60, 8, 102);
 }
 
 .tales_of_adventure_preview {
-    border-radius: 25px;
+    border-radius: 32px;
     max-width: 1280px;
     display: flex;
     align-items: center;
     margin: 0 auto;
     background: rgb(98, 89, 89);
+    border: 2px solid #73AD21;
 }
 
 .tales_of_adventure_preview_text {
@@ -96,6 +98,7 @@ body {
 .tales_of_adventure_preview_image {
     margin: auto 0;
     border-radius: 30px;
+    border: 1px solid #73AD21;
 }
 
 .col-4 p {
