--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
+#content-desktop {
+    display: block;
+}
+
+#content-mobile {
+    display: none;
+}
+
 .hero-image {
     background-image: url("../sprites/bl.jpg.png");
-    height: 30%;
+    height: 100%;
     margin-top: 50px;
     background-position: center;
     background-repeat: no-repeat;
@@ -65,6 +73,7 @@ body {
     border-radius: 32px;
     border: 2px solid #73AD21;
     margin: 0 auto;
+    display: block;
     background-color: rgb(60, 8, 102);
 }
 
@@ -99,6 +108,37 @@ body {
     margin: auto 0;
     border-radius: 30px;
     border: 1px solid #73AD21;
+}
+
+@media (max-width: 768px),
+screen and (orientation: portrait) {
+    .tales_of_adventure_preview_text {
+        width: 50%;
+    }
+    .tales_of_adventure_preview_image {
+        width: 80%;
+        height: 80%;
+        border: 0;
+    }
+    .hero-image {
+        background-image: url("../sprites/toa.png");
+    }
+    #content-desktop {
+        display: none;
+    }
+    #content-mobile {
+        display: block;
+    }
+}
+
+@media (max-width: 768px),
+screen and (orientation: portrait) {
+    #gameWarning {
+        display: flex;
+    }
+    #game {
+        display: none;
+    }
 }
 
 .col-4 p {
@@ -267,4 +307,78 @@ ul.social-footer2 li a {
     height: 30px;
     width: 30px;
     text-align: center;
+}
+
+
+/* Style the button that is used to open and close the collapsible content */
+
+.collapsible,
+.p {
+    background-color: rgb(60, 8, 102);
+    color: rgb(255, 253, 253);
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    border-top-right-radius: 32px;
+    border-top-left-radius: 32px;
+}
+
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+
+.active,
+.collapsible:hover {
+    background-color: rgb(60, 8, 102);
+}
+
+
+/* Style the collapsible content. Note: hidden by default */
+
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: lightgrey;
+    border-bottom-right-radius: 32px;
+    border-bottom-left-radius: 32px;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+}
+
+.topnav #myLinks {
+    display: none;
+}
+
+.topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+}
+
+.topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #04AA6D;
+    color: white;
 }
