--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,10 @@
 
 .hero-image {
     background-image: url("../sprites/bl.jpg.png");
-    height: 100%;
+    height: auto;
     margin-top: 50px;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
 }
 
